# monocr-web

./: .gitignore  .npmrc  .prettierignore  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  wrangler.json
functions/: monocr.onnx.js
messages/: en.json  mm.json
ocr-engine/: Cargo.toml
ocr-engine/src/: lib.rs
project.inlang/: settings.json
scripts/: copy-wasm.mjs
src/: app.css  app.html  index.css
src/lib/: config.ts  debug-segmentation.ts  i18n.ts  logger.ts  monocr-onnx.ts  monocr.ts  ocr.worker.ts  segmentation.ts  worker_plan.md
src/lib/components/: Dropzone.svelte  index.ts
src/lib/components/layout/: Footer.svelte  Header.svelte
src/lib/components/ui/: Button.svelte  LanguageToggle.svelte  SEO.svelte  ThemeToggle.svelte
src/lib/styles/: animations.css
src/lib/utils/: animation-config.ts  use-intersection.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/blog/: +page.svelte
src/routes/docs/: +page.svelte
src/routes/services/: +page.svelte
static/: _headers  charset.txt  manifest.webmanifest  profile.avif  sitemap.xml
static/wasm/: ort.all.bundle.min.mjs  ort.bundle.min.mjs  ort.jspi.bundle.min.mjs  ort.jspi.min.mjs  ort.jspi.mjs  ort.min.mjs  ort.mjs  ort.wasm.mjs  ort.webgl.mjs  ort.webgpu.min.mjs  ort.webgpu.mjs
