[package]
name = "ocr-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
ocrs = { version = "0.10", default-features = false }
rten = { version = "0.21", default-features = false }
rten-tensor = "0.21"
rten-imageproc = "0.21"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
anyhow = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "s" # Optimize for size (also good for speed in Wasm)
lto = true
codegen-units = 1
